@@ -2,6 +2,7 @@ package com.agh.hydra.referral.service;
 
 import com.agh.hydra.common.model.UserId;
 import com.agh.hydra.referral.model.ReferralAnnouncement;
+import com.agh.hydra.referral.request.CreateReferralApplicationRequest;
 import com.agh.hydra.referral.request.CreateReferralRequest;
 import com.agh.hydra.referral.request.ReferralAnnouncementFilterRequest;
 import com.agh.hydra.referral.request.ReferralAnnouncementRequest;
@@ -37,4 +38,12 @@ public interface IReferralService {
      */
     Page<ReferralAnnouncement> getReferralAnnouncement(@Valid ReferralAnnouncementFilterRequest request,
                                                        @NotNull Pageable pageable);
+
+    /**
+     * Creates referral announcement application
+     * @param request apply request
+     * @param userId applier identifier
+     */
+    void applyForReferralAnnouncement(@Valid @NotNull CreateReferralApplicationRequest request,
+                                      @Valid @NotNull UserId userId);
 }
