@@ -9,10 +9,12 @@ import com.agh.hydra.job.model.JobAnnouncement;
 import com.agh.hydra.job.request.JobAnnouncementFilterRequest;
 import com.agh.hydra.job.service.IJobService;
 import com.agh.hydra.referral.dao.ReferralRepository;
+import com.agh.hydra.referral.entity.ReferralApplicationEntity;
 import com.agh.hydra.referral.entity.ReferralEntity;
 import com.agh.hydra.referral.mapper.ReferralMapper;
 import com.agh.hydra.referral.model.ReferralAnnouncement;
 import com.agh.hydra.referral.model.ReferralAnnouncementFilter;
+import com.agh.hydra.referral.request.CreateReferralApplicationRequest;
 import com.agh.hydra.referral.request.CreateReferralRequest;
 import com.agh.hydra.referral.request.ReferralAnnouncementFilterRequest;
 import com.agh.hydra.referral.request.ReferralAnnouncementRequest;
@@ -30,8 +32,7 @@ import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
 import java.util.List;
 
-import static com.agh.hydra.common.exception.BusinessException.ACTIVE_REFERRAL_EXISTS;
-import static com.agh.hydra.common.exception.BusinessException.INVALID_REFERRAL_CLOSING_DATE;
+import static com.agh.hydra.common.exception.BusinessException.*;
 import static com.agh.hydra.common.exception.TechnicalException.JOB_ANNOUNCEMENT_NOT_FOUND;
 import static com.agh.hydra.common.model.FunctionalPrivilege.FN_PRV_CREATE_REFERRAL;
 import static com.agh.hydra.common.model.FunctionalPrivilege.FN_PRV_INVALIDATE_REFERRAL;
@@ -55,13 +56,12 @@ public class ReferralService implements IReferralService {
         privilegeService.throwIfUnprivileged(userId, FN_PRV_CREATE_REFERRAL);
 
         JobAnnouncement jobAnnouncement = getJobAnnouncement(request.getJobId());
-        if (jobAnnouncement.getClosingDate().isBefore(request.getClosingDate())) {
-            throw INVALID_REFERRAL_CLOSING_DATE.getException();
-        }
 
-        if (referralRepository.referralAnnouncementExists(getValue(userId), getValue(request.getJobId()))) {
-            throw ACTIVE_REFERRAL_EXISTS.getException();
-        }
+        INVALID_REFERRAL_CLOSING_DATE.throwIf(
+                jobAnnouncement.getClosingDate().isBefore(request.getClosingDate()));
+
+        ACTIVE_REFERRAL_EXISTS.throwIf(
+                referralRepository.referralAnnouncementExists(getValue(userId), getValue(request.getJobId())));
 
         ReferralEntity entity = ReferralMapper.INSTANCE.mapCreateRequest(request);
         entity.setAuthorId(getValue(userId));
@@ -89,6 +89,28 @@ public class ReferralService implements IReferralService {
         long total = referralRepository.getReferralAnnouncementCount(filter);
 
         return new PageImpl<>(announcements, pageable, total);
+    }
+
+    @Override
+    public void applyForReferralAnnouncement(@Valid @NotNull CreateReferralApplicationRequest request,
+                                             @Valid @NotNull UserId applierId) {
+        ReferralAnnouncementFilter filter = ReferralAnnouncementFilter.builder()
+                .includeIds(singleton(getValue(request.getReferralId())))
+                .pageSize(1).offset(0).build();
+
+        ReferralAnnouncement announcement = referralRepository.getReferralAnnouncement(filter).stream()
+                .map(ReferralMapper.INSTANCE::mapAnnouncement).findFirst()
+                .orElseThrow(REFERRAL_NOT_FOUND::getException);
+
+        REFERRAL_AUTHOR_APPLICATION.throwIf(announcement.getAuthorId().equals(applierId));
+
+        REFERRAL_APPLICATION_EXISTS.throwIf(
+                referralRepository.referralApplicationExists(getValue(applierId), getValue(request.getReferralId())));
+
+        ReferralApplicationEntity application = ReferralMapper.INSTANCE.mapApplication(request);
+        application.setUserId(getValue(applierId));
+
+        referralRepository.createReferralApplication(application);
     }
 
     private JobAnnouncement getJobAnnouncement(JobId jobId) {
